[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeonBunny"
version = "1.3.5"
description = "A Life program by tderk, originally LPro.py and Destiny [2024]"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "tderk", email = "usvu.tech@gmail.com" }
]

[project.scripts]
NeonBunny = "NeonBunny.scripts.main:run"
neonbunny = "NeonBunny.scripts.main:run"

nibbler = "NeonBunny.scripts.lpro:main"
nibble = "NeonBunny.scripts.lpro_s:main"

NB = "NeonBunny.scripts.main:run"
nb = "NeonBunny.scripts.main:run"

nblr = "NeonBunny.scripts.lpro:main"
nbl = "NeonBunny.scripts.lpro_s:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["NeonBunny*", "NeonBunny.*"] 
exclude = ["tests*", "docs*", "venv*", "build*", "dist*", "*test*"]

[tool.setuptools.package-data]
"NeonBunny" = ["py.typed"] 
"NeonBunny.scripts" = ["*.txt", "*.md", "*.json", "data/*", "logs/*"]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
